<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".productm">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="119sp"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/background_banner_productm"
                            android:orientation="horizontal">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/profile_image"
                                android:layout_width="110dp"
                                android:layout_height="110dp"
                                android:layout_gravity="center"
                                android:src="@drawable/bannercomida"
                                app:civ_border_color="@color/graydark"
                                app:civ_border_width="2dp" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/productName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="1dp"
                                    android:layout_marginStart="10dp"
                                    android:text="@string/lbl_title_product"
                                    android:textAllCaps="true"
                                    android:textColor="@color/black"
                                    android:textStyle="bold" />

                                <ScrollView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_above="@+id/priceProduct"
                                    android:layout_below="@+id/productName">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:id="@+id/description"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_margin="1dp"
                                            android:text="@string/lbl_description_product"
                                            android:textColor="@color/black" />
                                    </LinearLayout>
                                </ScrollView>

                                <TextView
                                    android:id="@+id/priceProduct"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignEnd="@+id/productName"
                                    android:layout_alignParentBottom="true"
                                    android:layout_marginTop="2dp"
                                    android:text="@string/lbl_price_product"
                                    android:textColor="@color/confirm" />
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.tt.whorlviewlibrary.WhorlView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progressBar2"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            app:whorlview_circle_colors="#F14336_#ffffff_#5677fc_#F44336_#4CAF50"
            app:whorlview_circle_speed="270"
            app:whorlview_parallax="fast"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="178dp"
            app:whorlview_strokeWidth="6"
            app:whorlview_sweepAngle="90">
        </com.tt.whorlviewlibrary.WhorlView>
    </RelativeLayout>

    <include layout="@layout/content_productm" />

</android.support.design.widget.CoordinatorLayout>

